--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       property="og:description"
-      content="Richard is a fullstack web developer based in the Cincinnati Northern Kentucky area. Whether it's web design, engineering, og development let's talk. Check out my protfolio work."
+      content="Richard is a fullstack web developer based in the Cincinnati Northern Kentucky area. Whether it's web design, engineering, or development lets talk. Check out my portfolio work."
     />
     <meta
       property="description"
